<resources>
    <string name="app_name">Читалка</string>
    <string name="articleDetailsActionBarTitle">Подробнее</string>
    <string name="channelsActionBarTitle">Список каналов</string>
    <string name="articleDetailsButtonName">Перейти к источнику</string>
    <string name="addChannelMenuButton">Добавить канал</string>
    <string name="addChannelTitle">Добавление канала</string>
    <string name="openSettingsMenuButton">Настройки</string>
    <string name="deleteChannelMenuButton">Удалить канал</string>
    <string name="listIsEmpty">Список пуст</string>
    <string name="rssChannelEnterHint">Введите адрес RSS канала</string>
    <string name="addChannelButton">Добавить</string>

    <string name="isNotCorrectURL">Некорректно указан url</string>
    <string name="connectionError">Не удалость подключиться к заданному адресу</string>
    <string name="channelIsAlreadyExistsError">Данный канал уже существует</string>
    <string name="notRssOrAtomXmlError">По данному адресу, не обнаружена RSS или ATOM лента</string>
    <string name="channelWriteSqlError">Ошибка записи в базу данных</string>

    <string name="alarmCheckBoxTitle">Загрузка новостей по таймеру</string>
    <string name="alarmCheckBoxSummary">Включить или выключить загрузку новостей по таймеру</string>
    <string name="alarmCheckBoxDefault">true</string>

    <string name="alarmTimerPreferenceDefault">180</string>
    <string name="alarmTimerPreferenceTitle">Частота загрузки новостей</string>
    <string name="alarmTimerPreferenceSummary">Позволяет выбрать частоту с которой будут загружаться новости в фоновом режиме</string>

    <string name="maxNewsCountPreferenceTitle">Количество хранимых новостей</string>
    <string name="maxNewsCountPreferenceSummary">Установить максимальное количество новостей, которые будут сохранятся в базу данных</string>
    <string name="maxNewsCountPreferenceDefault">500</string>

    <string name="alarmCheckBoxPreferenceKey" translatable="false">alarmCheckBox</string>
    <string name="alarmTimerPreferenceKey" translatable="false">alarmTimerPreference</string>
    <string name="maxNewsCountPreferenceKey" translatable="false">maxNewsCountPreference</string>

</resources>
