<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="@string/alarmCheckBoxPreferenceKey"
        android:title="@string/alarmCheckBoxTitle"
        android:summary="@string/alarmCheckBoxSummary"
        android:defaultValue="@string/alarmCheckBoxDefault" />
    <ListPreference
        android:title="@string/alarmTimerPreferenceTitle"
        android:summary="@string/alarmTimerPreferenceSummary"
        android:key="@string/alarmTimerPreferenceKey"
        android:defaultValue="@string/alarmTimerPreferenceDefault"
        android:entries="@array/alarmTimerArrayEntries"
        android:entryValues="@array/alarmTimerArrayValues"
        android:dependency="alarmCheckBox">
    </ListPreference>
    <ListPreference
        android:title="@string/maxNewsCountPreferenceTitle"
        android:summary="@string/maxNewsCountPreferenceSummary"
        android:key="@string/maxNewsCountPreferenceKey"
        android:defaultValue="@string/maxNewsCountPreferenceDefault"
        android:entries="@array/maxNewsCountArray"
        android:entryValues="@array/maxNewsCountArray">
    </ListPreference>
</PreferenceScreen>